backup-20260106-091143/ns-ums/06-ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      alb.ingress.kubernetes.io/healthcheck-interval-seconds: "15"
      alb.ingress.kubernetes.io/healthcheck-path: /usermgmt/
      alb.ingress.kubernetes.io/healthcheck-port: traffic-port
      alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
      alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "10"
      alb.ingress.kubernetes.io/healthy-threshold-count: "2"
      alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
      alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.connection.s=60
      alb.ingress.kubernetes.io/load-balancer-name: eks-microservices-demo
      alb.ingress.kubernetes.io/scheme: internet-facing
      alb.ingress.kubernetes.io/success-codes: 200-499
      alb.ingress.kubernetes.io/unhealthy-threshold-count: "3"
      external-dns.alpha.kubernetes.io/hostname: services.kubeoncloud.com, ums.kubeoncloud.com
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"alb.ingress.kubernetes.io/healthcheck-interval-seconds":"15","alb.ingress.kubernetes.io/healthcheck-path":"/usermgmt/","alb.ingress.kubernetes.io/healthcheck-port":"traffic-port","alb.ingress.kubernetes.io/healthcheck-protocol":"HTTP","alb.ingress.kubernetes.io/healthcheck-timeout-seconds":"10","alb.ingress.kubernetes.io/healthy-threshold-count":"2","alb.ingress.kubernetes.io/listen-ports":"[{\"HTTP\":80}]" [...]
    creationTimestamp: "2025-12-25T13:39:04Z"
    deletionGracePeriodSeconds: 0
    deletionTimestamp: "2025-12-29T04:28:00Z"
    finalizers:
    - ingress.k8s.aws/resources
    generation: 3
    labels:
      app: usermgmt-restapp
      runon: fargate
    name: eks-microservices-demo
    namespace: ns-ums
    resourceVersion: "1344469"
    uid: f9c3f5c5-2700-4df6-9328-4700af8c0c9f
  spec:
    ingressClassName: my-aws-ingress-class
    rules:
    - http:
        paths:
        - backend:
            service:
              name: usermgmt-restapp-nodeport-service
              port:
                number: 8095
          path: /usermgmt
          pathType: Prefix
        - backend:
            service:
              name: usermgmt-restapp-nodeport-service
              port:
                number: 8095
          path: /
          pathType: Prefix
  status:
    loadBalancer:
      ingress:
      - hostname: eks-microservices-demo-849618070.us-east-1.elb.amazonaws.com
        ports:
        - port: 80
          protocol: ""
kind: List
metadata:
  resourceVersion: ""
